--- a/index.html
+++ b/index.html
@@ -53,13 +53,21 @@
                 <div class="card">
                     <div class="card-body">
                         <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
-                        <h5 style="font-weight: bold;color: var(--bs-pink);">Track Auction House prices for your favorite cars in Forza Horizon 5!<br></h5>
+                        <h4 style="font-weight: bold;color: var(--bs-pink);">Track Auction House prices for your favorite cars in Forza Horizon 5!<br></h4>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-star"></i></p>
                             </div>
                             <div class="col">
-                                <p class="font-monospace">Do you want to get the most out of your Forza Horizon 5 Auction House experience? Drift down this page to take a look at our interactive plots that will help you understand the dynamic pricing trends within the game.<br></p>
+                                <h5>Do you want to see the current and historical prices of different cars that have sold in the Forza Horizon 5 Auction House?<br><br></h5>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-level-down-alt"></i></p>
+                            </div>
+                            <div class="col">
+                                <h5>Drift down this page to take a look at our interactive plots that will help you understand the dynamic pricing trends within the game.<br><br></h5>
                             </div>
                         </div>
                         <div class="row">
@@ -67,22 +75,13 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="fas fa-money-bill-wave"></i></p>
                             </div>
                             <div class="col">
-                                <p class="font-monospace">With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-eye"></i></p>
-                            </div>
-                            <div class="col">
-                                <p class="font-monospace">These graphs are updated regularly, so be sure to check back often!<br></p>
+                                <h5>With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></h5>
                             </div>
                         </div>
                     </div>
                     <div class="alert alert-info alert-dismissible" role="alert" style="border-color: var(--bs-gray-dark);background: rgba(255,193,7,0.25);margin: 16px;"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        <h6 class="alert-heading">:::: DATA REFRESH DATE ::::&nbsp;<br></h6>
-                        <p class="font-monospace text-uppercase fw-bolder">Auction data last updated: 08/19/2022<br></p>
-                        <p class="font-monospace">Check out the new and improved manufacturer plots :D<br></p><a class="alert-link" href="about.html">Read more about this data</a>
+                        <h5 class="alert-heading">:::: DATA REFRESH DATE ::::&nbsp;<br></h5>
+                        <p class="font-monospace text-uppercase fw-bolder">Auction data last updated: 08/20/2022<br></p><a class="alert-link" href="about.html">Read more about this data</a>
                     </div>
                 </div>
             </div>
@@ -92,13 +91,14 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
-                        <h6 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">The trends or patterns shown in these plots can help you figure out the best time and price to buy or sell your favorite cars.<br></h6>
+                        <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover price trends for different cars.<br></h4>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock"></i></p>
                             </div>
                             <div class="col">
-                                <p>The scatter plots in the list below present data about the winning bid amount over time.&nbsp;<br></p>
+                                <h5>The scatter plots in the list below present data about the winning bid amount over time.&nbsp;<br></h5>
+                                <p><br></p>
                             </div>
                         </div>
                         <div class="row">
@@ -106,7 +106,32 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="fas fa-truck-monster"></i></p>
                             </div>
                             <div class="col">
-                                <p>Each dot on a graph represents a successful car auction and will show information about the year, make and model, the winning bid amount, the time it was saved, and that car's performance rating.<br></p>
+                                <h5>Each dot on a graph represents a successful car auction and will show information about:<br></h5>
+                                <div class="row">
+                                    <div class="col-1"><i class="far fa-list-alt"></i></div>
+                                    <div class="col-11">
+                                        <h5 style="font-weight: bold;">the year, make and model<br></h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1"><i class="far fa-money-bill-alt"></i></div>
+                                    <div class="col-11">
+                                        <h5 style="font-weight: bold;">the winning bid price<br></h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1"><i class="far fa-clock"></i></div>
+                                    <div class="col-11">
+                                        <h5 style="font-weight: bold;">the time the auction was saved<br></h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1"><i class="fas fa-flag-checkered"></i></div>
+                                    <div class="col-11">
+                                        <h5 style="font-weight: bold;">the car's performance rating.<br></h5>
+                                    </div>
+                                </div>
+                                <p><br></p>
                             </div>
                         </div>
                     </div>
@@ -120,7 +145,7 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar"></i></p>
                                         </div>
                                         <div class="col">
-                                            <p>Find a car model by its manufacturer. Select and compare different car models from the same manufacturer.<br></p>
+                                            <h5>Find a car model by its manufacturer. Select and compare different car models from the same manufacturer.<br></h5>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -128,7 +153,7 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-sort-alpha-down"></i></p>
                                         </div>
                                         <div class="col">
-                                            <p>Jump to a manufacturer:<br></p>
+                                            <h4>Jump to a manufacturer:<br></h4>
                                             <div class="row g-0 text-center" id="alpha_buttons">
                                                 <div class="col"><a class="btn btn-outline-dark btn-sm fs-2" role="button" href="#make_a">A</a></div>
                                                 <div class="col"><a class="btn btn-outline-dark btn-sm fs-2" role="button" href="#make_b">B</a></div>
