--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: linear-gradient(rgba(214,51,132,0.33) 0%, rgba(255,193,7,0.33) 100%);">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
                 <div class="card">
@@ -47,9 +47,9 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid" style="padding: 0px;">
-        <div class="row g-0">
-            <div class="col-md-12">
+    <div class="container-fluid" style="padding: 0px;background: linear-gradient(rgba(255,193,7,0.33) 77%, rgba(214,51,132,0.33));">
+        <div class="row g-0 justify-content-center">
+            <div class="col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
                         <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
@@ -87,12 +87,12 @@
                 </div>
             </div>
         </div>
-        <div class="row g-0">
-            <div class="col">
+        <div class="row g-0 justify-content-center">
+            <div class="col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
                         <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
-                        <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover price trends for different cars.<br></h4>
+                        <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover car price trends.<br></h4>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock"></i></p>
@@ -154,8 +154,8 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-sort-alpha-down"></i></p>
                                         </div>
                                         <div class="col">
-                                            <h4>Jump to a manufacturer:<br></h4>
-                                            <div class="row g-0 text-center" id="alpha_buttons">
+                                            <h4 id="alpha_buttons">Jump to a manufacturer:<br></h4>
+                                            <div class="row g-0 text-center">
                                                 <div class="col"><a class="btn btn-outline-dark btn-sm fs-2" role="button" href="#make_a">A</a></div>
                                                 <div class="col"><a class="btn btn-outline-dark btn-sm fs-2" role="button" href="#make_b">B</a></div>
                                                 <div class="col"><a class="btn btn-outline-dark btn-sm fs-2" role="button" href="#make_c">C</a></div>
