--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="container-fluid" style="padding: 0px;background: linear-gradient(rgba(255,193,7,0.33) 77%, rgba(214,51,132,0.33));">
         <div class="row g-0 justify-content-center">
-            <div class="col-md-12 col-lg-11 col-xl-10 col-xxl-9">
+            <div class="col-lg-12 col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
                         <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="row g-0 justify-content-center">
-            <div class="col-md-12 col-lg-11 col-xl-10 col-xxl-9">
+            <div class="col-lg-12 col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
                         <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
