--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg bg-light bg-gradient navigation-clean">
+    <nav class="navbar navbar-light navbar-expand-lg navigation-clean">
         <div class="container-fluid"><a class="navbar-brand" href="index.html">Forza Auction Data&nbsp;<i class="fas fa-home" style="color: var(--bs-pink);"></i></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
@@ -52,7 +52,7 @@
             <div class="col-lg-12 col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
-                        <h1 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Welcome to Forza Auction Data</h1>
+                        <h1 class="section_heading">Welcome to Forza Auction Data</h1>
                         <h4 style="font-weight: bold;color: var(--bs-pink);">Track Auction House prices for your favorite cars in Forza Horizon 5!<br></h4>
                         <div class="row">
                             <div class="col-2">
@@ -91,7 +91,7 @@
             <div class="col-lg-12 col-xl-11 col-xxl-10">
                 <div class="card">
                     <div class="card-body">
-                        <h2 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Finished Auctions Scatter Plots</h2>
+                        <h2 class="section_heading">Finished Auctions Scatter Plots</h2>
                         <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover car price trends.<br></h4>
                         <div class="row">
                             <div class="col-2">
@@ -140,7 +140,7 @@
                         <div class="col" style="padding: 0px;">
                             <div class="card">
                                 <div class="card-body">
-                                    <h3 style="color: var(--bs-white);background: var(--bs-pink);border-radius: 4px;padding: 6px;font-weight: bold;">Manufacturer Plots</h3>
+                                    <h3 class="section_heading">Manufacturer Plots</h3>
                                     <div class="row">
                                         <div class="col-2">
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar"></i></p>
