--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h4 style="font-weight: bold;color: var(--bs-pink);">Track Auction House prices for your favorite cars in Forza Horizon 5!<br></h4>
                         <div class="row">
                             <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-star"></i></p>
+                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-star list_icon"></i></p>
                             </div>
                             <div class="col">
                                 <h5>Do you want to see the current and historical prices of different cars that have sold in the Forza Horizon 5 Auction House?<br><br></h5>
@@ -64,7 +64,7 @@
                         </div>
                         <div class="row">
                             <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-level-down-alt"></i></p>
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-level-down-alt list_icon"></i></p>
                             </div>
                             <div class="col">
                                 <h5>Drift down this page to take a look at our interactive plots that will help you understand the dynamic pricing trends within the game.<br><br></h5>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="row">
                             <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-money-bill-wave"></i></p>
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-money-bill-wave list_icon"></i></p>
                             </div>
                             <div class="col">
                                 <h5>With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></h5>
@@ -95,7 +95,7 @@
                         <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover car price trends.<br></h4>
                         <div class="row">
                             <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock"></i></p>
+                                <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock list_icon"></i></p>
                             </div>
                             <div class="col">
                                 <h5>The scatter plots in the list below present data about the winning bid amount over time.&nbsp;<br></h5>
@@ -104,30 +104,30 @@
                         </div>
                         <div class="row">
                             <div class="col-2">
-                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-truck-monster"></i></p>
+                                <p class="text-center" style="font-size: 2rem;"><i class="fas fa-truck-monster list_icon"></i></p>
                             </div>
                             <div class="col">
                                 <h5>Each dot on a graph represents a successful car auction and will show information about:<br></h5>
                                 <div class="row g-0">
-                                    <div class="col-1"><i class="far fa-list-alt"></i></div>
+                                    <div class="col-1"><i class="far fa-list-alt list_icon"></i></div>
                                     <div class="col-11">
                                         <h5 style="font-weight: bold;">the year, make and model<br></h5>
                                     </div>
                                 </div>
                                 <div class="row g-0">
-                                    <div class="col-1"><i class="far fa-money-bill-alt"></i></div>
+                                    <div class="col-1"><i class="far fa-money-bill-alt list_icon"></i></div>
                                     <div class="col-11">
                                         <h5 style="font-weight: bold;">the winning bid price<br></h5>
                                     </div>
                                 </div>
                                 <div class="row g-0">
-                                    <div class="col-1"><i class="far fa-clock"></i></div>
+                                    <div class="col-1"><i class="far fa-clock list_icon"></i></div>
                                     <div class="col-11">
                                         <h5 style="font-weight: bold;">the time the auction was saved<br></h5>
                                     </div>
                                 </div>
                                 <div class="row g-0">
-                                    <div class="col-1"><i class="fas fa-flag-checkered"></i></div>
+                                    <div class="col-1"><i class="fas fa-flag-checkered list_icon"></i></div>
                                     <div class="col-11">
                                         <h5 style="font-weight: bold;">the car's performance rating.<br></h5>
                                     </div>
@@ -143,7 +143,7 @@
                                     <h3 class="section_heading">Manufacturer Plots</h3>
                                     <div class="row">
                                         <div class="col-2">
-                                            <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar"></i></p>
+                                            <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar list_icon"></i></p>
                                         </div>
                                         <div class="col">
                                             <h5>Find a car model by its manufacturer. Select and compare different car models from the same manufacturer.<br></h5>
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-2">
-                                            <p class="text-center" style="font-size: 2rem;"><i class="fas fa-sort-alpha-down"></i></p>
+                                            <p class="text-center" style="font-size: 2rem;"><i class="fas fa-sort-alpha-down list_icon"></i></p>
                                         </div>
                                         <div class="col">
                                             <h4 id="alpha_buttons">Jump to a manufacturer:<br></h4>
