--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-star list_icon"></i></p>
                             </div>
                             <div class="col">
-                                <h5>Do you want to see the current and historical prices of different cars that have sold in the Forza Horizon 5 Auction House?<br><br></h5>
+                                <h5>See what cars will sell for in the FH5 Auction House!<br><br></h5>
                             </div>
                         </div>
                         <div class="row">
@@ -67,7 +67,7 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="fas fa-level-down-alt list_icon"></i></p>
                             </div>
                             <div class="col">
-                                <h5>Drift down this page to take a look at our interactive plots that will help you understand the dynamic pricing trends within the game.<br><br></h5>
+                                <h5>Drift down this page to look at our interactive plots that can help you understand the dynamic pricing trends within the game.<br><br></h5>
                             </div>
                         </div>
                         <div class="row">
@@ -75,13 +75,13 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="fas fa-money-bill-wave list_icon"></i></p>
                             </div>
                             <div class="col">
-                                <h5>With this data, you can make informed decisions that can help you maximize your winnings in the Auction House.<br></h5>
+                                <h5>The data can help you make better decisions when buying or selling cars.<br></h5>
                             </div>
                         </div>
                     </div>
                     <div class="alert alert-info alert-dismissible" role="alert" style="border-color: var(--bs-gray-dark);background: rgba(255,193,7,0.25);margin: 16px;"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         <h5 class="alert-heading">:::: DATA REFRESH DATE ::::&nbsp;<br></h5>
-                        <p class="font-monospace text-uppercase fw-bolder">Auction data last updated: 09/01/2022<br></p>
+                        <p class="font-monospace text-uppercase fw-bolder"></p>
                         <p>Now testing new y-axis slider controls for zooming on scatter plots.</p><a class="alert-link" href="about.html">Read more about this data</a>
                     </div>
                 </div>
@@ -146,7 +146,14 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar list_icon"></i></p>
                                         </div>
                                         <div class="col">
-                                            <h5>Find a car model by its manufacturer. Select and compare different car models from the same manufacturer.<br></h5>
+                                            <h5>Find a car model by its manufacturer.&nbsp;<br></h5>
+                                            <div class="row g-0">
+                                                <div class="col-1"><i class="fas fa-car-side list_icon"></i></div>
+                                                <div class="col-11">
+                                                    <h6>compare different car models from the same brands<br></h6>
+                                                </div>
+                                            </div>
+                                            <p><br></p>
                                         </div>
                                     </div>
                                     <div class="row">
