--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 class="section_heading">Finished Auctions Scatter Plots</h2>
-                        <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover car price trends.<br></h4>
+                        <h4 class="card-subtitle pulse animated mb-2" style="color: var(--bs-gray-dark);background: var(--bs-yellow);padding: 5px;border-radius: 4px;margin-top: 4px;">View large amounts of sales data from successful auctions to discover car price trends<br></h4>
                         <div class="row">
                             <div class="col-2">
                                 <p class="text-center" style="font-size: 2rem;"><i class="far fa-clock list_icon"></i></p>
                             </div>
                             <div class="col">
-                                <h5>The scatter plots in the list below present data about the winning bid amount over time.&nbsp;<br></h5>
+                                <h5>The scatter plots in the list below present data about the winning bid amount over time.<br></h5>
                                 <p><br></p>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                 <div class="row g-0">
                                     <div class="col-1"><i class="fas fa-flag-checkered list_icon"></i></div>
                                     <div class="col-11">
-                                        <h5 style="font-weight: bold;">the car's performance rating.<br></h5>
+                                        <h5 style="font-weight: bold;">the car's performance rating<br></h5>
                                     </div>
                                 </div>
                                 <p><br></p>
@@ -146,11 +146,11 @@
                                             <p class="text-center" style="font-size: 2rem;"><i class="fas fa-search-dollar list_icon"></i></p>
                                         </div>
                                         <div class="col">
-                                            <h5>Find a car model by its manufacturer.&nbsp;<br></h5>
+                                            <h5>Find a car model by its manufacturer.<br></h5>
                                             <div class="row g-0">
                                                 <div class="col-1"><i class="fas fa-car-side list_icon"></i></div>
                                                 <div class="col-11">
-                                                    <h6>compare different car models from the same brands<br></h6>
+                                                    <h6>Compare different car models from the same brands.<br></h6>
                                                 </div>
                                             </div>
                                             <p><br></p>
