--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <p class="text-center" style="font-size: 2rem;"><i class="fas fa-truck-monster list_icon"></i></p>
                             </div>
                             <div class="col">
-                                <h5>Each dot on a graph represents a successful car auction and will show information about:<br></h5>
+                                <h5>Each circle on the graphs represents a successful car auction and will show information about:<br></h5>
                                 <div class="row g-0">
                                     <div class="col-1"><i class="far fa-list-alt list_icon"></i></div>
                                     <div class="col-11">
